added more traits

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3257,6 +3257,23 @@
   number = {4}
 }
 
+@article{millerOnlySunlitLeaves2021,
+  title = {Only Sun-Lit Leaves of the Uppermost Canopy Exceed Both Air Temperature and Photosynthetic Thermal Optima in a Wet Tropical Forest},
+  author = {Miller, Benjamin D. and Carter, Kelsey R. and Reed, Sasha C. and Wood, Tana E. and Cavaleri, Molly A.},
+  date = {2021-05-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {301-302},
+  pages = {108347},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2021.108347},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192321000307},
+  urldate = {2021-03-16},
+  abstract = {Tropical forests have evolved under relatively narrow temperature regimes, and therefore may be more susceptible to climatic change than forests in higher latitudes. Recent evidence shows that lowland tropical forest canopies may already be exceeding thermal maxima for photosynthesis. Height can strongly influence both the microclimate and physiology of forest canopy foliage, yet vertical trends in canopy micrometeorology are rarely examined in tropical forests. To improve our understanding of how climatological and micrometeorological conditions affect tropical tree function, we assessed vertical gradients of photosynthetic photon flux density, vapor pressure deficit, air temperature, leaf temperature, and the difference between leaf and air temperature (ΔT) in a Puerto Rican tropical wet forest. Both air temperature and vapor pressure deficit increased linearly with height. Leaf temperature, however, did not significantly differ across the shaded foliage from 0-16 m, while the uppermost layer (20 m) was up to 4°C hotter than the rest of the foliage and up to 5°C hotter than air temperature at the highest radiation intensity. As a result, leaf temperatures in the shaded middle canopy and understory showed nearly poikilothermic behavior (i.e., leaf temperatures~=~air temperature), while the uppermost canopy strata showed megathermic behavior (i.e., leaf temperatures greater than air temperature), revealing different thermoregulation strategies for sun-lit versus shaded foliage. In addition, the uppermost canopy was the only stratum to exceed mean photosynthetic temperature optima for this site (Topt~=~30.2 ± 1.1°C). Because the upper canopy plays a disproportionately large role in whole-forest photosynthesis, continued warming could potentially weaken the tropics’ carbon sink capacity. However, the shaded leaves may be able increase carbon uptake with further warming because they appear to be able to maintain temperatures below photosynthetic optima, possibly with the help of radiation shielding provided by the uppermost canopy layer.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JKV8YDZM\\Miller et al. - 2021 - Only sun-lit leaves of the uppermost canopy exceed.pdf;C\:\\Users\\Me\\Zotero\\storage\\ACDRN6ER\\S0168192321000307.html},
+  keywords = {Canopy,Climate Change,Leaf Temperature,Megathermy,Microclimate,Photosynthetic Optimum,Poikilothermy,Thermoregulation,Vertical Gradient},
+  langid = {english}
+}
+
 @article{molesWhichBetterPredictor2014a,
   title = {Which Is a Better Predictor of Plant Traits: Temperature or Precipitation?},
   shorttitle = {Which Is a Better Predictor of Plant Traits},
@@ -6058,6 +6075,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\H48DGTWD\\1365-2745.html;C\:\\Users\\Me\\Zotero\\storage\\PVWFIT5S\\1365-2745.html},
   langid = {english},
   number = {4}
+}
+
+@article{wittichAltitudinalChangePhotosynthetic2012,
+  title = {Altitudinal {{Change}} in the {{Photosynthetic Capacity}} of {{Tropical Trees}}: {{A Case Study}} from {{Ecuador}} and a {{Pantropical Literature Analysis}}},
+  shorttitle = {Altitudinal {{Change}} in the {{Photosynthetic Capacity}} of {{Tropical Trees}}},
+  author = {Wittich, Bärbel and Horna, Viviana and Homeier, Jürgen and Leuschner, Christoph},
+  date = {2012-09-01},
+  journaltitle = {Ecosystems},
+  volume = {15},
+  pages = {958--973},
+  issn = {1435-0629},
+  doi = {10.1007/s10021-012-9556-9},
+  url = {https://doi.org/10.1007/s10021-012-9556-9},
+  urldate = {2021-03-16},
+  abstract = {In tropical mountains, trees are the dominant life form from sea level to above 4,000-m altitude under highly variable thermal conditions (range of mean annual temperatures: {$<$}8 to {$>$}28°C). How light-saturated net photosynthesis of tropical trees adapts to variation in temperature, atmospheric CO2 concentration, and further environmental factors, that change along elevation gradients, is not precisely known. With gas exchange measurements in mature trees, we determined light-saturated net photosynthesis at ambient temperature (T) and [CO2] (Asat) of 40 tree species from 21 families in tropical mountain forests at 1000-, 2000-, and 3000-m elevation in southern Ecuador. We tested the hypothesis that stand-level averages of Asat and leaf dark respiration (RD) per leaf area remain constant with elevation. Stand-level means of Asat were 8.8, 11.3, and 7.2~μmol~CO2~m−2~s−1; those of RD 0.8, 0.6, and 0.7~μmol~CO2~m−2~s−1 at 1000-, 2000-, and 3000-m elevation, respectively, with no significant altitudinal trend. We obtained coefficients of among-species variation in Asat and RD of 20–53\% (n~=~10–16 tree species per stand). Examining our data in the context of a pan-tropical Asat data base for mature tropical trees (c. 170 species from 18 sites at variable elevation) revealed that area-based Asat decreases in tropical mountains by, on average, 1.3~μmol~CO2~m−2~s−1~per~km altitude increase (or by 0.2~μmol~CO2~m−2~s−1 per K temperature decrease). The Asat decrease occurred despite an increase in leaf mass per area with altitude. Local geological and soil fertility conditions and related foliar N and P concentrations considerably influenced the altitudinal Asat patterns. We conclude that elevation is an important influencing factor of the photosynthetic activity of tropical trees. Lowered Asat together with a reduced stand leaf area decrease canopy C gain with elevation in tropical mountains.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\4FMBZHYD\\Wittich et al. - 2012 - Altitudinal Change in the Photosynthetic Capacity .pdf},
+  langid = {english},
+  number = {6}
 }
 
 @article{woodsStructureMoreImportant2018,
