--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -617,6 +617,25 @@
   number = {5}
 }
 
+@article{cavaleriColdbloodedForestsWarming2020a,
+  title = {Cold-Blooded Forests in a Warming World},
+  author = {Cavaleri, Molly A.},
+  date = {2020},
+  journaltitle = {New Phytologist},
+  volume = {228},
+  pages = {1455--1457},
+  issn = {1469-8137},
+  doi = {10.1111/nph.16916},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.16916},
+  urldate = {2021-03-16},
+  abstract = {This article is a Commentary on Drake et al. (2020), 228: 1511–1523.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.16916},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WEIGKIBM\\Cavaleri - 2020 - Cold-blooded forests in a warming world.pdf;C\:\\Users\\Me\\Zotero\\storage\\9AJ9RAZ9\\nph.html},
+  keywords = {canopy temperature,carbon assimilation-weighted leaf temperature,cellulosic 18O,homeostasis,homeothermy,poikilothermy,thermoregulation},
+  langid = {english},
+  number = {5}
+}
+
 @article{cavaleriFoliarEcosystemRespiration2008a,
   title = {Foliar and Ecosystem Respiration in an Old-Growth Tropical Rain Forest},
   author = {Cavaleri, Molly A. and Oberbauer, Steven F. and Ryan, Michael G.},
