--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -137,6 +137,25 @@
   number = {10}
 }
 
+@article{aspinwallConvergentAcclimationLeaf2016,
+  title = {Convergent Acclimation of Leaf Photosynthesis and Respiration to Prevailing Ambient Temperatures under Current and Warmer Climates in {{Eucalyptus}} Tereticornis},
+  author = {Aspinwall, Michael J. and Drake, John E. and Campany, Courtney and Vårhammar, Angelica and Ghannoum, Oula and Tissue, David T. and Reich, Peter B. and Tjoelker, Mark G.},
+  date = {2016},
+  journaltitle = {New Phytologist},
+  volume = {212},
+  pages = {354--367},
+  issn = {1469-8137},
+  doi = {10.1111/nph.14035},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.14035},
+  urldate = {2021-03-23},
+  abstract = {Understanding physiological acclimation of photosynthesis and respiration is important in elucidating the metabolic performance of trees in a changing climate. Does physiological acclimation to climate warming mirror acclimation to seasonal temperature changes? We grew Eucalyptus tereticornis trees in the field for 14 months inside 9-m tall whole-tree chambers tracking ambient air temperature (Tair) or ambient Tair + 3°C (i.e. ‘warmed’). We measured light- and CO2-saturated net photosynthesis (Amax) and night-time dark respiration (R) each month at 25°C to quantify acclimation. Tree growth was measured, and leaf nitrogen (N) and total nonstructural carbohydrate (TNC) concentrations were determined to investigate mechanisms of acclimation. Warming reduced Amax and R measured at 25°C compared to ambient-grown trees. Both traits also declined as mean daily Tair increased, and did so in a similar way across temperature treatments. Amax and R (at 25°C) both increased as TNC concentrations increased seasonally; these relationships appeared to arise from source–sink imbalances, suggesting potential substrate regulation of thermal acclimation. We found that photosynthesis and respiration each acclimated equivalently to experimental warming and seasonal temperature change of a similar magnitude, reflecting a common, nearly homeostatic constraint on leaf carbon exchange that will be important in governing tree responses to climate warming.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.14035},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZTH5SE2K\\Aspinwall et al. - 2016 - Convergent acclimation of leaf photosynthesis and .pdf;C\:\\Users\\Me\\Zotero\\storage\\3ZTW29S2\\nph.html},
+  keywords = {acclimation,carbohydrates,climate change,Eucalyptus,photosynthesis,respiration,temperature,warming},
+  langid = {english},
+  number = {2}
+}
+
 @article{augspurgerDifferencesLeafPhenology2003,
   title = {Differences in Leaf Phenology between Juvenile and Adult Trees in a Temperate Deciduous Forest},
   author = {Augspurger, C. K. and Bartlett, E. A.},
@@ -1911,22 +1930,6 @@
   number = {12}
 }
 
-@article{hansenVariationPigmentComposition2002,
-  title = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest: A Comparative Study on Deciduous Tree Species Differing in Shade Tolerance},
-  shorttitle = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest},
-  author = {Hansen, Ute and Fiedler, Brita and Rank, Barbara},
-  date = {2002-05},
-  journaltitle = {Trees},
-  volume = {16},
-  pages = {354--364},
-  issn = {09311890},
-  doi = {10.1007/s00468-002-0163-9},
-  url = {http://link.springer.com/10.1007/s00468-002-0163-9},
-  urldate = {2021-03-20},
-  langid = {english},
-  number = {4}
-}
-
 @article{harleyEffectsLightTemperature1996,
   title = {Effects of Light, Temperature and Canopy Position on Net Photosynthesis and Isoprene Emission from Sweetgum ({{Liquidambar}} Styraciflua) Leaves},
   author = {Harley, P. and Guenther, A. and Zimmerman, P.},
@@ -1994,6 +1997,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\VJZKC2P9\\5743162.html},
   langid = {english},
   number = {5}
+}
+
+@article{herrickEffectsCO2Enrichment1999,
+  title = {Effects of {{CO2}} Enrichment on the Photosynthetic Light Response of Sun and Shade Leaves of Canopy Sweetgum Trees ({{Liquidambar}} Styraciflua) in a Forest Ecosystem},
+  author = {Herrick, Jeffrey D. and Thomas, Richard B.},
+  date = {1999-10-01},
+  journaltitle = {Tree Physiology},
+  volume = {19},
+  pages = {779--786},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/19.12.779},
+  url = {https://doi.org/10.1093/treephys/19.12.779},
+  urldate = {2021-03-23},
+  abstract = {To investigate whether sun and shade leaves respond differently to CO2 enrichment, we examined photosynthetic light response of sun and shade leaves in canopy sweetgum (Liquidambar styraciflua L.) trees growing at ambient and elevated (ambient + 200 μl l−1) atmospheric CO2 in the Brookhaven National Laboratory/Duke University Free Air CO2 Enrichment (FACE) experiment. The sweetgum trees were naturally established in a 15-year-old forest dominated by loblolly pine (Pinus taeda L.). Measurements were made in early June and late August 1997 during the first full year of CO2 fumigation in the Duke Forest FACE experiment. Sun leaves had a 68\% greater leaf mass per unit area, 63\% more leaf N per unit leaf area, 27\% more chlorophyll per unit leaf area and 77\% greater light-saturated photosynthetic rates than shade leaves. Elevated CO2 strongly stimulated light-saturated photosynthesis of sun and shade leaves in June and August; however, the relative photosynthetic enhancement by elevated CO2 for sun leaves was more than double the relative enhancement of shade leaves. Elevated CO2 stimulated apparent quantum yield by 30\%, but there was no interaction between CO2 and leaf position. Daytime leaf-level carbon gain extrapolated from photosynthetic light response curves indicated that sun leaves were enhanced 98\% by elevated CO2, whereas shade leaves were enhanced 41\%. Elevated CO2 did not significantly affect leaf N per unit area in sun or shade leaves during either measurement period. Thus, the greater CO2 enhancement of light-saturated photosynthesis in sun leaves than in shade leaves was probably a result of a greater amount of nitrogen per unit leaf area in sun leaves. A full understanding of the effects of increasing atmospheric CO2 concentrations on forest ecosystems must take account of the complex nature of the light environment through the canopy and how light interacts with CO2 to affect photosynthesis.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QGHKU3GR\\Herrick and Thomas - 1999 - Effects of CO2 enrichment on the photosynthetic li.pdf;C\:\\Users\\Me\\Zotero\\storage\\2FULSHHX\\1658335.html},
+  number = {12}
 }
 
 @online{HighTemperatureInhibition,
@@ -5467,6 +5486,13 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\F5V5R8H8\\nph.html}
 }
 
+@online{SeasonalVariationTemperature,
+  title = {Seasonal Variation in the Temperature Response of Leaf Respiration in {{Quercus}} Rubra: Foliage Respiration and Leaf Properties - {{XU}} - 2006 - {{Functional Ecology}} - {{Wiley Online Library}}},
+  url = {https://besjournals-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1111/j.1365-2435.2006.01161.x},
+  urldate = {2021-03-23},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VPAYAB8P\\j.1365-2435.2006.01161.html}
+}
+
 @article{sefcikPhotosyntheticResponsesUnderstory2006,
   title = {Photosynthetic Responses to Understory Shade and Elevated Carbon Dioxide Concentration in Four Northern Hardwood Tree Species},
   author = {Sefcik, L. T. and Zak, D. R. and Ellsworth, D. S.},
@@ -6199,6 +6225,42 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\9AXTXNSC\\gcb.html}
 }
 
+@article{turnbullRespirationCharacteristicsTemperate2005,
+  title = {Respiration Characteristics in Temperate Rainforest Tree Species Differ along a Long-Term Soil-Development Chronosequence},
+  author = {Turnbull, Matthew H. and Tissue, David T. and Griffin, Kevin L. and Richardson, Sarah J. and Peltzer, Duane A. and Whitehead, David},
+  date = {2005-03-01},
+  journaltitle = {Oecologia},
+  volume = {143},
+  pages = {271--279},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-004-1803-0},
+  url = {https://doi.org/10.1007/s00442-004-1803-0},
+  urldate = {2021-03-23},
+  abstract = {We measured the response of dark respiration (Rd) to temperature and foliage characteristics in the upper canopies of tree species in temperate rainforest communites in New Zealand along a soil chronosequence (six sites from 6~years to 120,000~years). The chronosequence provided a vegetation gradient characterised by significant changes in soil nutrition. This enabled us to examine the extent to which changes in dark respiration can be applied across forest biomes and the utility of scaling rules in whole-canopy carbon modelling. The response of respiration to temperature in the dominant tree species differed significantly between sites along the sequence. This involved changes in both Rd at a reference temperature (R10) and the extent to which Rd increased with temperature (described by Eo, a parameter related to the energy of activation, or the change in Rd over a 10°C range, Q10). Site averaged Eo ranged from 44.4~kJ~mol−1~K−1 at the 60-year-old site to 26.0~kJ~mol−1~K−1 at the oldest, most nutrient poor, site. Relationships between respiratory and foliage characteristics indicated that both the temperature response of respiration (Eo or Q10) and the instantaneous rate of respiration increased with both foliar nitrogen and phosphorus content. The ratio of photosynthetic capacity (Whitehead et al. in Oecologia 2005) to respiration (Amax/Rd) attained values in excess of 15 for species in the 6- to 120-year-old sites, but thereafter decreased significantly to around five at the 120,000-year-old site. This indicates that shoot carbon acquisition is regulated by nutrient limitations in the retrogressing ecosystems on the oldest sites. Our findings indicate that respiration and its temperature response will vary according to soil age and, therefore, to soil nutrient availability and the stage of forest development. Thus, variability in respiratory characteristics for canopies should be considered when using models to integrate respiration at large spatial scales.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\S59XE6EE\\Turnbull et al. - 2005 - Respiration characteristics in temperate rainfores.pdf},
+  langid = {english},
+  number = {2}
+}
+
+@article{turnbullScalingFoliarRespiration2003,
+  title = {Scaling Foliar Respiration in Two Contrasting Forest Canopies},
+  author = {Turnbull, M. H. and Whitehead, D. and Tissue, D. T. and Schuster, W. S. F. and Brown, K. J. and Griffin, K. L.},
+  date = {2003},
+  journaltitle = {Functional Ecology},
+  volume = {17},
+  pages = {101--114},
+  issn = {1365-2435},
+  doi = {10.1046/j.1365-2435.2003.00713.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2435.2003.00713.x},
+  urldate = {2021-03-23},
+  abstract = {1 The responses of night-time dark respiration (Rd) to temperature and leaf characteristics were measured through the canopies of tree species from two distinct forests – an oak-dominated deciduous forest in north-eastern USA, and a conifer-dominated temperate rainforest in New Zealand. These were chosen to examine the extent to which canopy level changes in dark respiration can be applied across forest biomes, and the appropriateness of scaling rules to calculations of whole-canopy carbon efflux. 2 The response of respiration to temperature differed significantly between species and with height in the canopy. This involved changes in both Rd at a reference temperature, and the extent to which Rd increased with temperature (described by the energy of activation, Eo, or the change in Rd over a 10 °C range, Q10). Eo ranged from 25 (lower-canopy leaves) to 53·8 kJ mol−1 K−1 (upper-canopy leaves) in the deciduous forest, and from 24–37 kJ mol−1 K−1 in the temperate rainforest site. 3 Relationships between respiratory and leaf characteristics indicated that the instantaneous rate of respiration covaries with soluble sugar concentration and leaf nitrogen, but the temperature response of respiration (Eo or Q10) appears to be driven by leaf N. 4 Scaling leaf respiratory carbon loss to the whole-canopy level indicated that simplifying assumptions regarding the variation in respiration and its temperature response with canopy height tend to underestimate carbon loss if the assumptions are based on lower-canopy leaf physiology, but overestimate carbon loss if the assumptions are based on upper-canopy physiology. Thus, canopy-level differences in leaf respiratory characteristics should be considered in modelling efforts attempting to estimate whole-canopy respiration.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2435.2003.00713.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GQLU6VEL\\Turnbull et al. - 2003 - Scaling foliar respiration in two contrasting fore.pdf;C\:\\Users\\Me\\Zotero\\storage\\XH426SI6\\Turnbull et al. - 2003 - Scaling foliar respiration in two contrasting fore.pdf;C\:\\Users\\Me\\Zotero\\storage\\8DJKTFYF\\j.1365-2435.2003.00713.html},
+  keywords = {Carbohydrates,dark respiration,deciduous forest,nitrogen,podocarp–angiosperm forest,temperature},
+  langid = {english},
+  number = {1}
+}
+
 @article{tymenQuantifyingMicroenvironmentalVariation2017,
   title = {Quantifying Micro-Environmental Variation in Tropical Rainforest Understory at Landscape Scale by Combining Airborne {{LiDAR}} Scanning and a Sensor Network},
   author = {Tymen, Blaise and Vincent, Grégoire and Courtois, Elodie A. and Heurtebize, Julien and Dauzat, Jean and Marechaux, Isabelle and Chave, Jérôme},
@@ -6861,6 +6923,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\J9RISHJK\\Xu et al. - 2020 - Heatwave effects on gross primary production of no.pdf},
   langid = {english},
   number = {7}
+}
+
+@article{xuSeasonalVariationTemperature2006,
+  title = {Seasonal Variation in the Temperature Response of Leaf Respiration in {{Quercus}} Rubra: Foliage Respiration and Leaf Properties},
+  shorttitle = {Seasonal Variation in the Temperature Response of Leaf Respiration in {{Quercus}} Rubra},
+  author = {Xu, C.-Y. and Griffin, K. L.},
+  date = {2006},
+  journaltitle = {Functional Ecology},
+  volume = {20},
+  pages = {778--789},
+  issn = {1365-2435},
+  doi = {10.1111/j.1365-2435.2006.01161.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2435.2006.01161.x},
+  urldate = {2021-03-23},
+  abstract = {1 Leaf respiratory temperature responses and general leaf properties of Quercus rubra were measured throughout the 2003 growing season in a deciduous forest in the north-eastern USA. Measurements were made in the upper and lower portions of the canopy at two sites with different soil water availability. Correlations among respiration and various leaf properties were examined. 2 At a set temperature (10 and 20 °C), area-based leaf respiration rates were higher in both the early and late growing season than in the mid-growing season (0·50 vs 0·33 µmol CO2 m−2 s−1 at 10 °C, on average). Upper-canopy leaves generally had higher respiration rates than lower-canopy leaves (0·53 vs 0·30 µmol CO2 m−2 s−1 at 10 °C, on average). At the drier site a more significant seasonal pattern in respiration was observed, while at the more mesic site a stronger canopy-position effect was detected. E0, a model variable related to the overall energy of activation of respiration, varied only slightly (52 ± 5 kJ mol−1 K−1), and was not influenced by season, site or canopy position. 3 Leaf properties (specific leaf area, nitrogen, soluble sugars) also varied with season, site and canopy position. Leaf N and reducing monose were positively correlated with leaf respiration rates. After isolating single factors (season, site, canopy position), reducing monose could partially explain the seasonality in respiration (32−79\%), and leaf N (Narea) was well correlated with the canopy-position effect. 4 Our results suggest that the temporal and spatial heterogeneities of respiration need to be considered in ecosystem models, but significant simplifications may be made in Q. rubra by assuming a constant temperature coefficient (E0, 52·5 kJ mol−1 in this study) or predicting the base respiration rate (R0) from well understood leaf properties.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2435.2006.01161.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QPU5K438\\Xu and Griffin - 2006 - Seasonal variation in the temperature response of .pdf;C\:\\Users\\Me\\Zotero\\storage\\7G7Z43VZ\\j.1365-2435.2006.01161.html},
+  keywords = {carbohydrates,dark respiration,deciduous forest,nitrogen,thermal acclimation},
+  langid = {english},
+  number = {5}
 }
 
 @article{yang_spatial_1999,
