--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -809,6 +809,37 @@
   number = {3}
 }
 
+@article{chazdonImportanceSunflecksForest1991,
+  title = {The {{Importance}} of {{Sunflecks}} for {{Forest Understory Plants}}},
+  author = {Chazdon, Robin L. and Pearcy, Robert W.},
+  date = {1991},
+  journaltitle = {BioScience},
+  volume = {41},
+  pages = {760--766},
+  publisher = {{[American Institute of Biological Sciences, Oxford University Press]}},
+  issn = {0006-3568},
+  doi = {10.2307/1311725},
+  eprint = {1311725},
+  eprinttype = {jstor},
+  number = {11}
+}
+
+@article{chazdonImportanceSunflecksForest1991a,
+  title = {The {{Importance}} of {{Sunflecks}} for {{Forest Understory Plants}}},
+  author = {Chazdon, Robin L. and Pearcy, Robert W.},
+  date = {1991},
+  journaltitle = {BioScience},
+  volume = {41},
+  pages = {760--766},
+  publisher = {{[American Institute of Biological Sciences, Oxford University Press]}},
+  issn = {0006-3568},
+  doi = {10.2307/1311725},
+  eprint = {1311725},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LMFDQTA7\\Chazdon and Pearcy - 1991 - The Importance of Sunflecks for Forest Understory .pdf},
+  number = {11}
+}
+
 @article{chazdonPhotosyntheticLightEnvironments1984,
   title = {Photosynthetic {{Light Environments}} in a {{Lowland Tropical Rain Forest}} in {{Costa Rica}}},
   author = {Chazdon, Robin L. and Fetcher, Ned},
@@ -6255,7 +6286,7 @@
   urldate = {2021-03-23},
   abstract = {1 The responses of night-time dark respiration (Rd) to temperature and leaf characteristics were measured through the canopies of tree species from two distinct forests – an oak-dominated deciduous forest in north-eastern USA, and a conifer-dominated temperate rainforest in New Zealand. These were chosen to examine the extent to which canopy level changes in dark respiration can be applied across forest biomes, and the appropriateness of scaling rules to calculations of whole-canopy carbon efflux. 2 The response of respiration to temperature differed significantly between species and with height in the canopy. This involved changes in both Rd at a reference temperature, and the extent to which Rd increased with temperature (described by the energy of activation, Eo, or the change in Rd over a 10 °C range, Q10). Eo ranged from 25 (lower-canopy leaves) to 53·8 kJ mol−1 K−1 (upper-canopy leaves) in the deciduous forest, and from 24–37 kJ mol−1 K−1 in the temperate rainforest site. 3 Relationships between respiratory and leaf characteristics indicated that the instantaneous rate of respiration covaries with soluble sugar concentration and leaf nitrogen, but the temperature response of respiration (Eo or Q10) appears to be driven by leaf N. 4 Scaling leaf respiratory carbon loss to the whole-canopy level indicated that simplifying assumptions regarding the variation in respiration and its temperature response with canopy height tend to underestimate carbon loss if the assumptions are based on lower-canopy leaf physiology, but overestimate carbon loss if the assumptions are based on upper-canopy physiology. Thus, canopy-level differences in leaf respiratory characteristics should be considered in modelling efforts attempting to estimate whole-canopy respiration.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2435.2003.00713.x},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\GQLU6VEL\\Turnbull et al. - 2003 - Scaling foliar respiration in two contrasting fore.pdf;C\:\\Users\\Me\\Zotero\\storage\\XH426SI6\\Turnbull et al. - 2003 - Scaling foliar respiration in two contrasting fore.pdf;C\:\\Users\\Me\\Zotero\\storage\\8DJKTFYF\\j.1365-2435.2003.00713.html},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GQLU6VEL\\Turnbull et al. - 2003 - Scaling foliar respiration in two contrasting fore.pdf;C\:\\Users\\Me\\Zotero\\storage\\8DJKTFYF\\j.1365-2435.2003.00713.html},
   keywords = {Carbohydrates,dark respiration,deciduous forest,nitrogen,podocarp–angiosperm forest,temperature},
   langid = {english},
   number = {1}
