--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4720,10 +4720,13 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\BAHET5BM\\plb.html}
 }
 
-@online{PlasticLeafMorphology,
+@online{PlasticLeafMorphologya,
   title = {Plastic Leaf Morphology in Three Species of {{Quercus}}: {{The}} More Exposed Leaves Are Smaller, More Lobated and Denser},
+  shorttitle = {Plastic Leaf Morphology in Three Species of {{Quercus}}},
+  issn = {1442-1984},
   url = {https://esj-journals-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/epdf/10.1111/1442-1984.12253},
-  urldate = {2020-12-28}
+  urldate = {2021-03-28},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\IUUG7U8V\\1442-1984.html}
 }
 
 @article{poorterCausesConsequencesVariation2009a,
