--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3297,6 +3297,23 @@
   options = {useprefix=true}
 }
 
+@article{martinBoundaryLayerConductance1999,
+  title = {Boundary Layer Conductance, Leaf Temperature and Transpiration of {{Abies}} Amabilis Branches},
+  author = {Martin, T. A. and Hinckley, T. M. and Meinzer, F. C. and Sprugel, D. G.},
+  date = {1999-06-01},
+  journaltitle = {Tree Physiology},
+  volume = {19},
+  pages = {435--443},
+  issn = {0829-318X, 1758-4469},
+  doi = {10.1093/treephys/19.7.435},
+  url = {https://academic.oup.com/treephys/article-lookup/doi/10.1093/treephys/19.7.435},
+  urldate = {2021-03-29},
+  abstract = {We used three methods to measure boundary layer conductance to heat transfer (gbH) and water vapor transfer (gbV) in foliated branches of Abies amabilis Dougl. ex J. Forbes, a subalpine forest tree that produces clumped shoot morphology on sun-formed branches. Boundary layer conductances estimated in the field from energy balance measurements increased linearly from approximately 10 mm s−1 at low wind speeds ({$<$} 0.1 m s−1) to over 150 mm s−1 at wind speeds of 2.0 m s−1. Boundary layer conductances measured on shoot models in a wind tunnel were consistently higher than field measurements. The difference between wind tunnel values and field measurements was attributable to variation in path length between the two experimental environments. Boundary layer conductance estimated by subtracting stomatal resistance (rsV) measured with a porometer from the total branch vapor phase resistance were unusually small. Sensitivity analysis demonstrated that this method is not suitable for coniferous foliage or when stomatal conductance (gsV) is small compared with gbV. Analysis of the relative magnitudes of gsV and gbV revealed that, under most conditions, A. amabilis branches are well coupled (i.e., gsV is the dominant controller of transpiration). The boundary layer conductance to heat transfer is small enough that leaf temperature can become substantially higher than air temperature when radiation is high and wind speed is low. Over a two-month period, the maximum difference between leaf and air temperatures exceeded 6 °C. Leaf temperature exceeded air temperature by more than 2 °C on 10\% of the daylight hours during this period. Consideration of both the photosynthetic temperature response of A. amabilis foliage as well as the summer air temperature conditions in its habitat suggests that these elevated leaf temperatures do not have a significant impact on carbon gain during the growing season.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\N6AFRC5A\\19-7-435.pdf},
+  langid = {english},
+  number = {7}
+}
+
 @article{martinCovarianceSunShade2020a,
   title = {Covariance of {{Sun}} and {{Shade Leaf Traits Along}} a {{Tropical Forest Elevation Gradient}}},
   author = {Martin, Roberta E. and Asner, Gregory P. and Bentley, Lisa Patrick and Shenkin, Alexander and Salinas, Norma and Huaypar, Katherine Quispe and Pillco, Milenka Montoya and Ccori Álvarez, Flor Delis and Enquist, Brian J. and Diaz, Sandra and Malhi, Yadvinder},
@@ -5317,15 +5334,20 @@
   number = {8}
 }
 
-@article{sariyevaDifferencesPhotosyntheticActivity2007,
+@article{sarijevaDifferencesPhotosyntheticActivity2007,
   title = {Differences in Photosynthetic Activity, Chlorophyll and Carotenoid Levels, and in Chlorophyll Fluorescence Parameters in Green Sun and Shade Leaves of {{Ginkgo}} and {{Fagus}}},
-  author = {Sariyeva, Gulmira and Knapp, Martin and Lichtenthaler, Hartmut},
-  date = {2007-08-01},
-  journaltitle = {Journal of plant physiology},
+  author = {Sarijeva, Gulmira and Knapp, Martin and Lichtenthaler, Hartmut K.},
+  date = {2007-07},
+  journaltitle = {Journal of Plant Physiology},
   volume = {164},
   pages = {950--955},
+  issn = {01761617},
   doi = {10.1016/j.jplph.2006.09.002},
-  abstract = {The differences in pigment levels and photosynthetic activity of green sun and shade leaves of ginkgo (Ginkgo biloba L.) and beech (Fagus sylvatica L.) are described. Sun leaves of both tree species possessed higher levels in chlorophylls (Chl) and carotenoids on a leaf area basis, higher values for the ratio Chl a/b and lower values for the ratio Chl/carotenoids (a+b)/(x+c) in comparison to shade leaves. The higher photosynthetic rates P(N) of sun leaves (ginkgo 5.4+/-0.9 and beech 8.5+/-2.1 micromol m(-2)s(-1)) were also reflected by higher values for the Chl fluorescence decrease ratios R(F)(d) 690 and R(F)(d) 735. In contrast, the shade leaves had lower P(N) rates (ginkgo 2.4+/-0.3 and beech 1.8+/-1.2 micromol m(-2)s(-1)). In both tree species the stomatal conductance G(s) was significantly higher in sun (range: 70-19 1 mmol m(-2)s(-1)) as compared to shade leaves (range: 5-55 mmol m(-2)s(-1)). In fact, at saturating light conditions there existed a close correlation between G(s) values and P(N) rates. Differences between sun and shade leaves also existed in several other Chl fluorescence ratios (F(v)/F(m), F(v)/F(o), and the stress adaptation index Ap). The results clearly demonstrate that the fan-shaped gymnosperm ginkgo leaves show the same high and low irradiance adaptation response as the angiosperm beech leaves.}
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0176161706002550},
+  urldate = {2021-03-29},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\M5MDM9UY\\Sarijeva et al. - 2007 - Differences in photosynthetic activity, chlorophyl.pdf},
+  langid = {english},
+  number = {7}
 }
 
 @article{sastry_leaf_2018,
