--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4187,12 +4187,6 @@
   number = {4}
 }
 
-@online{MetaAnalysisPlant,
-  title = {A Meta‐analysis of Plant Responses to Light Intensity for 70 Traits Ranging from Molecules to Whole Plant Performance - {{Poorter}} - 2019 - {{New Phytologist}} - {{Wiley Online Library}}},
-  url = {https://nph-onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1111/nph.15754},
-  urldate = {2021-03-08}
-}
-
 @article{michaletzEnergeticCarbonEconomic2016,
   title = {The Energetic and Carbon Economic Origins of Leaf Thermoregulation},
   author = {Michaletz, Sean T. and Weiser, Michael D. and McDowell, Nate G. and Zhou, Jizhong and Kaspari, Michael and Helliker, Brent R. and Enquist, Brian J.},
@@ -8134,7 +8128,7 @@
   url = {https://www.sciencedirect.com/science/article/pii/S0378112719311338},
   urldate = {2021-03-30},
   abstract = {Variability in leaf mass per area (LMA) is largely explained by leaf anatomical traits. However, few studies have been conducted to explore the anatomical characteristics and the contribution of leaf anatomical traits to LMA for coexisting broadleaf species with different shade tolerances in same forests at a regional scale. Here, we analyzed variations in LMA and three leaf anatomical traits and the bivariate relationships among four leaf traits within three canopy layers for five major coexisting broadleaf species with different shade tolerances in four mixed broadleaved-Korean pine (Pinus koraiensis) forests along a latitude gradient in Northeast China. We focused on assessing the relative weight of the leaf anatomical traits to predict LMA and on exploring the correlations among leaf anatomical traits, shade tolerance and LMA by using structural equation modeling (SEM). In comparison to shade-tolerant species, relative shade-intolerant species had higher LMA and length of minor veins per unit area (VLAmin). LMA, palisade tissue thickness (PT) and VLAmin increased with the height of the canopy. The bivariate relationships among the three anatomical traits and LMA were significantly different among the five species, but there were no significant differences among the three canopy layers. LMA was directly enhanced by PT, epidermis thickness (ET) and VLAmin and directly decreased by shade tolerance as well as indirectly decreased by shade tolerance via leaf anatomical traits. Our results clearly suggest that shade tolerance is important for driving variations in key leaf traits, which will provide a better understanding of the drivers of trait variation as well as the application of functional traits in outlining mechanisms of forest dynamics and management.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\U4TP4ECL\\Zhang et al. - 2019 - Contribution of leaf anatomical traits to leaf mas.pdf;C\:\\Users\\Me\\Zotero\\storage\\AXZLKCZ5\\S0378112719311338.html},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AXZLKCZ5\\S0378112719311338.html},
   keywords = {Canopy layer,Epidermis thickness,Leaf mass per area,Length of minor veins per unit area,Palisade tissue thickness,Shade tolerance},
   langid = {english}
 }
